Kubernetes/ingress-demo/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
      - demo.shc.in
      - sample-1.shc.in
      - sample-2.shc.in
    secretName: tls-secret
  rules:
  - host: demo.shc.in
    http:
      paths:
      - path: /sample1
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80
      - path: /sample2
        pathType: Prefix
        backend:
          service:
            name: app2-service
            port:
              number: 80

  - host: sample-1.shc.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80

  - host: sample-2.shc.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-service
            port:
              number: 80
